# opengl-kickoff

./: .gitignore  CMakeLists.txt  README.md
libs/: sdl-1.3-opengl-3.0-patch.diff
res/: simple.frag  simple.vert
src/: Shader.cpp  Shader.h  Time.cpp  Time.h  Utils.cpp  Utils.h  common.h  hello.cpp
